--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <title>Let's Chat</title>
     <!--/*@thymesVar id="chatForm" type="com.udacity.jwdnd.c1.review.Model.ChatForm"*/-->
-    <form th:object="${chatForm}" action="#" th:action="@{/chat}" method="post">
-        <label for="messageText">Message Text:</label>
-        <input id="messageText" type="text" th:field="*{messageText}">
-        <label for="messageType">Message Type: </label>
-        <select id="messageType" th:field="*{messageType}">
-            <option
-                th:each="type : ${allMessageTypes}"
-                th:value="${type}"
-                th:text="${type}">
-                Say
-            </option>
-        </select>
-        <input type="submit">
-    </form>
-    <div th:each="${chatMessgae : chatMessages}">
-        <span th:text="${chatMessage.username}">Username</span>: <span th:text="${chatMessage.messageText}">Hello World!</span>
-    </div>
 
 </head>
 <body>
-
+<form th:object="${chatForm}" action="#" th:action="@{/chat}" method="post">
+    <label for="messageText">Message Text:</label>
+    <input id="messageText" type="text" th:field="*{messageText}">
+    <label for="messageType">Message Type: </label>
+    <select id="messageType" th:field="*{messageType}">
+        <option
+                th:each="type : ${allMessageTypes}"
+                th:value="${type}"
+                th:text="${type}">
+            Say
+        </option>
+    </select>
+    <input type="submit">
+</form>
+<div th:each="${chatMessage : chatMessages}">
+    <span th:text="${chatMessage.username}">Username</span>: <span th:text="${chatMessage.messageText}">Hello World!</span>
+</div>
 </body>
 </html>
