Completed working Chat app

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -21,8 +21,8 @@
     </select>
     <input type="submit">
 </form>
-<div th:each="${chatMessage : chatMessages}">
-    <span th:text="${chatMessage.username}">Username</span>: <span th:text="${chatMessage.messageText}">Hello World!</span>
+<div th:each="chatMessage : ${chatMessages}">
+    <span th:text="${chatMessage.username}">Username</span>: <span th:text="${chatMessage.messagetext}">Hello World!</span>
 </div>
 </body>
 </html>
